Skip to content

GitLab

  • Menu
Projects Groups Snippets
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
  • Sign in / Register
  • VLC VLC
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 3,401
    • Issues 3,401
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 174
    • Merge requests 174
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Releases
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • VideoLAN
  • VLCVLC
  • Issues
  • #18344

Closed
Open
Created May 19, 2017 by Filip Roséen@FilipRoseen-refp

access/satip: assert on malformed URI

Easily reproduced by running vlc-devel --loop rtsp:// -Idummy:

vlc-static: src/posix/filesystem.c:148: vlc_close: Assertion `ret == 0 || errno != EBADF' failed.
Thread 10 "vlc-static" received signal SIGABRT, Aborted
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Assignee
Assign to
Time tracking

VideoLAN code repository instance